kubernetes/grafana-loki/manifest/grafana/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grafana
  labels:
    app.kubernetes.io/name: grafana-dashboard
    app.kubernetes.io/part-of: grafana
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: grafana-dashboard
      app.kubernetes.io/part-of: grafana
  template:
    metadata:
      labels:
        app.kubernetes.io/name: grafana-dashboard
        app.kubernetes.io/part-of: grafana
    spec:
      securityContext:
        fsGroup: 472
        supplementalGroups:
          - 0
      containers:
        - name: grafana
          image: grafana/grafana-oss:9.5.6-ubuntu
          imagePullPolicy: IfNotPresent
          ports:
            - name: http-grafana
              containerPort: 3000
              hostPort: 3000
              protocol: TCP
          readinessProbe:
            failureThreshold: 3
            httpGet:
              path: /robots.txt
              port: 3000
              scheme: HTTP
            initialDelaySeconds: 10
            periodSeconds: 30
            successThreshold: 1
            timeoutSeconds: 2
          livenessProbe:
            failureThreshold: 3
            initialDelaySeconds: 30
            periodSeconds: 10
            successThreshold: 1
            tcpSocket:
              port: 3000
            timeoutSeconds: 1
          resources:
            requests:
              cpu: 250m
              memory: 750Mi
          volumeMounts:
            - mountPath: /var/lib/grafana
              name: grafana-pv
      volumes:
        - name: grafana-pv
          persistentVolumeClaim:
            claimName: grafana-dashboard-volume-claim
