kubernetes/grafana-loki/manifest/grafana/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: grafana
  labels:
    app.kubernetes.io/name: grafana-dashboard
    app.kubernetes.io/part-of: grafana
spec:
  ports:
    - name: http-grafana
      port: 3000
      targetPort: 3000
  selector:
    app.kubernetes.io/name: grafana-dashboard
    app.kubernetes.io/part-of: grafana
