kubernetes/grafana-loki/manifest/grafana/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana-dashboard
  labels:
    app.kubernetes.io/name: grafana-dashboard
    app.kubernetes.io/part-of: grafana
spec:
  ingressClassName: ambassador
  rules:
    - host: grafana-dashboard.local.com
      http:
        paths:
          - backend:
              service:
                name: dashboard
                port:
                  name: http-grafana
            path: /
            pathType: ImplementationSpecific
